openshift/akrzos-gohttp-test.yaml
# Validates:
# * Create a namespace
# * Create a Service
# * Create a Route
# * Create a deployment with single replica reachable via route
---
apiVersion: v1
kind: Namespace
metadata:
  annontations:
    openshift.io/node-selector: ''
  name: akrzos-gohttp
---
apiVersion: v1
kind: Service
metadata:
  name: gohttp
  namespace: akrzos-gohttp
  labels:
    name: akrzos-gohttp
spec:
  ports:
  - name: akrzos-gohttp
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: akrzos-gohttp
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gohttp
  namespace: akrzos-gohttp
spec:
  tls:
    termination: edge
  to:
    name: gohttp
  port:
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gohttp
  namespace: akrzos-gohttp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akrzos-gohttp
  template:
    metadata:
      labels:
        app: akrzos-gohttp
    spec:
      containers:
      - name: gohttp
        image: quay.io/redhat-performance/test-gohttp-probe:latest
        ports:
        - containerPort: 8000
          protocol: TCP
        startupProbe:
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 12
          successThreshold: 1
          httpGet:
            path: "/livez"
            port: 8000
        livenessProbe:
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
          httpGet:
            path: "/livez"
            port: 8000
        readinessProbe:
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
          httpGet:
            path: "/readyz"
            port: 8000
